# ETRI_RL

./: .gitignore  README.md  enhanced_optimization.py  enhanced_optimization_annotated.py  environment_LuisO3BP.yml  production_final_test.py  production_final_test_annotated.py  pyproject.toml  requirements.txt  venv-setup1of3-manually.sh  venv-setup2of3.sh  venv-setup3of3.sh
docs/analysis/: graph-enhanced_optimization1.gv  graph-enhanced_optimization2.gv  graph-production_final_test1.gv  graph-production_final_test2.gv
results/: phase4_enhanced_all_0804a.json  ultimate_results0717_Curri.txt  ultimate_results0717_noCurri.txt
src/: __init__.py  device_utils.py  packing_env.py  packing_kernel.py  train_maskable_ppo.py
