[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rl-3d-bin-packing"
version = "1.0.0"
description = "3D Bin Packing with Maskable PPO using Reinforcement Learning"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8,<3.12"
license = {text = "MIT"}

dependencies = [
    "gymnasium>=0.26.0",
    "numpy>=1.21.5,<1.25.0",
    "nptyping==2.3.1",
    "Pillow>=9.2.0",
    "plotly>=5.15.0",
    "pandas>=1.5.0",
    "jupyter>=1.0.0",
    "pytest>=7.1.2",
    "sb3-contrib>=1.7.0",
    "stable-baselines3>=1.7.0",
    "torch>=1.12.0",
    "tensorboard>=2.10.0",
    "matplotlib>=3.5.0",
    "opencv-python>=4.6.0",
    "tqdm>=4.64.0",
    "kaleido>=0.2.1.post1; platform_machine != 'armv7l'",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
]

gpu = [
    "torch>=1.12.0",
    "torchvision>=0.13.0",
]

cpu = [
    "torch>=1.12.0",
    "torchvision>=0.13.0",
]

[tool.uv]
#exclude-newer = "2024-06-01"

[project.urls]
Homepage = "https://github.com/your-username/RL-3DbinPacking"
Repository = "https://github.com/your-username/RL-3DbinPacking.git"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true 